Fixed text alignment in buttons with icons

--- a/frontend/src/app/temp.scss
+++ b/frontend/src/app/temp.scss
@@ -1,5 +1,10 @@
 @import "resources/index";
 
+button.flex-row
+{
+    align-items: center;
+}
+
 .input-heading > *,
 .input-description > *,
 .toggle-heading > *,
